WTF Renaming LongExposureInfrared.cpp to LongExposureIR.cpp makes no difference, but renaming to LongExpIR.cpp fixes it!

--- a/ofxKinectForWindows2Lib/ofxKinectForWindows2Lib.vcxproj
+++ b/ofxKinectForWindows2Lib/ofxKinectForWindows2Lib.vcxproj
@@ -179,7 +179,7 @@
     <ClCompile Include="..\src\ofxKinectForWindows2\Source\Depth.cpp" />
     <ClCompile Include="..\src\ofxKinectForWindows2\Source\BaseImage.cpp" />
     <ClCompile Include="..\src\ofxKinectForWindows2\Source\Infrared.cpp" />
-    <ClCompile Include="..\src\ofxKinectForWindows2\Source\LongExposureInfraRed.cpp" />
+    <ClCompile Include="..\src\ofxKinectForWindows2\Source\LongExpIR.cpp" />
     <ClCompile Include="..\src\ofxKinectForWindows2\Utils.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
